chore: Update Dockerfile and .gitignore